--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -7,6 +7,12 @@
     "types": ["node"],
     "skipLibCheck": true,
 
+    /* 🔹 ALIAS @ (ISTO É O QUE FALTAVA) */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
